# remv

./: README
remv/: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  bootstrap.sh  configure.ac  remv.cpp
remv/doc/: Makefile.am  remv.1.in
remv/src/: Makefile.am  remv.cpp
remv/test/: Makefile.am  dashed.sh  defpath.sh  exists.sh  force.sh  many.sh  pretend.sh  recurs1.sh  recurs2.sh  single1.sh  single2.sh  subexpr1.sh  subexpr1_many.sh  subexpr2.sh
